--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "dotenv": "^16.0.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "luxon": "^3.0.3",
     "mongoose": "^6.5.3",
     "morgan": "~1.9.1",
     "pug": "2.0.0-beta11"
   },
   "devDependencies": {
-    "nodemon": "^2.0.19"
+    "@prettier/plugin-pug": "^2.2.0",
+    "nodemon": "^2.0.19",
+    "prettier": "^2.7.1"
   }
 }
